# Launcher

./: .editorconfig  .gitignore  .travis.yml  BUILD.md  BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt  COPYING.md  CPackConfig.cmake  I don't know what the problem is. Can some help?  ISSUE_TEMPLATE.md  MultiMC erreur 1  MultiMC.cpp  MultiMC.h  README.md  changelog.md  install_prereqs.cmake.in  main.cpp
api/gui/: CMakeLists.txt  DesktopServices.h  SkinUtils.cpp  SkinUtils.h
depends/classparser/: CMakeLists.txt
depends/javacheck/: CMakeLists.txt
depends/settings/: CMakeLists.txt  inifile.cpp
docs/: CMakeLists.txt  Doxyfile.in
libraries/classparser/: CMakeLists.txt
libraries/ganalytics/: CMakeLists.txt
libraries/katabasis/: CMakeLists.txt
libraries/launcher/: CMakeLists.txt
libraries/systeminfo/: CMakeLists.txt
libraries/zlib/: CMakeLists.txt  adler32.c  crc32.c  crc32.h  deflate.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  trees.c  trees.h  zutil.c  zutil.h
logic/: AbstractCommonModel.cpp  AbstractCommonModel.h  BaseConfigObject.cpp  BaseConfigObject.h  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseInstance_p.h  BaseProcess.cpp  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  ComponentsModel.cpp  ComponentsModel.h  Env.cpp  Env.h  FTBUtils.cpp  FTBUtils.h  FileHashCache.cpp  FileHashCache.h  FileStore.cpp  FileStore.h  FileSystem.cpp  FileSystem.h  ForgeInstaller.cpp  Functional.h  InstanceFactory.cpp  InstanceFactory.h  InstanceLauncher.cpp  InstanceLauncher.h  InstanceList.cpp  InstanceList.h  InstanceTreeProxyModel.cpp  InstanceTreeProxyModel.h  Json.cpp  Json.h  KRecursiveFilterProxyModel.cpp  KRecursiveFilterProxyModel.h  LegacyInstance.cpp  (+33 more)
logic/auth/: AccountModel.cpp  AccountModel.h  BaseAccount.cpp  BaseAccount.h  BaseAccountType.h  BaseSession.cpp  BaseSession.h  DefaultAccountProxyModel.cpp  DefaultAccountProxyModel.h  MojangAccount.h
logic/forge/: ForgeInstaller.cpp  ForgeVersion.h  ForgeVersionList.cpp  ForgeVersionList.h
logic/ftb/: FTBPlugin.cpp  FTBProfileStrategy.cpp  OneSixFTBInstance.cpp
logic/icons/: IconList.cpp  IconList.h
logic/java/: JavaUtils.cpp  JavaUtils.h  JavaVersionList.cpp  JavaVersionList.h
logic/lists/: BaseVersionList.h  InstanceList.cpp  InstanceList.h  OptiFineVersionList.cpp  OptiFineVersionList.h  QuickModsList.cpp  QuickModsList.h
logic/liteloader/: LiteLoaderVersionList.cpp  LiteLoaderVersionList.h
logic/minecraft/: Assets.cpp  Assets.h  InstanceVersion.cpp  InstanceVersion.h  JarMod.cpp  JarMod.h  LegacyInstance.cpp  LegacyInstance.h  LegacyUpdate.cpp  Libraries.cpp  Libraries.h  Library.cpp  Library.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftPatch.cpp  MinecraftProcess.cpp  MinecraftProcess.h  MinecraftProfile.cpp  MinecraftProfile.h  MinecraftVersionList.cpp  ModList.cpp  ModList.h  NullProfileStrategy.h  OneSixInstance.cpp  OneSixInstance.h  OneSixLibrary.cpp  OneSixLibrary.h  OneSixProfileStrategy.cpp  OneSixProfileStrategy.h  OneSixUpdate.cpp  OneSixUpdate.h  Package.h  Patch.cpp  Patch.h  Process.cpp  Process.h  ProfileStrategy.h  ProfileUtils.cpp  ProfileUtils.h  (+10 more)
logic/modmymc/: ModMyMCModel.cpp  ModMyMCModel.h
logic/net/: ByteArrayDownload.cpp  ByteArrayDownload.h  ByteArrayUpload.cpp  ByteArrayUpload.h  CacheDownload.cpp  CacheDownload.h  MD5EtagDownload.cpp  MD5EtagDownload.h  MavenResolver.cpp  MavenResolver.h  NetAction.h  NetJob.h  URLConstants.cpp  URLConstants.h
logic/quickmod/: QuickMod.cpp  QuickMod.h  QuickModBaseDownloadAction.cpp  QuickModBaseDownloadAction.h  QuickModBuilder.cpp  QuickModBuilder.h  QuickModDatabase.cpp  QuickModDatabase.h  QuickModDependencyDownloadTask.cpp  QuickModDependencyDownloadTask.h  QuickModDependencyResolver.cpp  QuickModDependencyResolver.h  QuickModDownload.cpp  QuickModDownload.h  QuickModDownloadAction.cpp  QuickModDownloadAction.h  QuickModFilesUpdater.cpp  QuickModFilesUpdater.h  QuickModIndexDownloadAction.cpp  QuickModIndexDownloadAction.h  QuickModIndexList.cpp  QuickModIndexList.h  QuickModInstaller.cpp  QuickModInstaller.h  QuickModInstanceModList.cpp  QuickModInstanceModList.h  QuickModLibraryInstaller.cpp  QuickModLibraryInstaller.h  QuickModMetadata.cpp  QuickModMetadata.h  QuickModRef.cpp  QuickModRef.h  QuickModSettings.cpp  QuickModSettings.h  QuickModUpdateMonitor.cpp  QuickModUpdateMonitor.h  QuickModVerificationTask.cpp  QuickModVerificationTask.h  QuickModVersion.cpp  QuickModVersion.h  (+6 more)
logic/resources/: Resource.cpp  Resource.h  ResourceObserver.cpp  ResourceObserver.h  ResourceProxyModel.cpp
logic/settings/: INIFile.cpp  OverrideSetting.cpp  OverrideSetting.h  SettingsObject.cpp  SettingsObject.h
logic/tasks/: CopyFileTask.cpp  CopyFileTask.h  MoveFileTask.cpp  MoveFileTask.h  ProgressProvider.h  SequentialTask.cpp  SequentialTask.h  StandardTask.cpp  StandardTask.h  Task.cpp  Task.h
logic/tools/: AMIDST.cpp  AMIDST.h  JProfiler.cpp  JVisualVM.cpp  MCEditTool.cpp
logic/updater/: DownloadUpdateTask.cpp  DownloadUpdateTask.h
logic/wonko/: BaseResource.cpp  BaseResource.h  BaseWonkoEntity.cpp  BaseWonkoEntity.h  DownloadableResource.cpp  DownloadableResource.h  OpSys.cpp  OpSys.h  Rules.cpp  Rules.h  WonkoIndex.cpp  WonkoIndex.h  WonkoPackage.cpp  WonkoPackage.h  WonkoPackageVersion.cpp  WonkoPackageVersion.h  WonkoReference.cpp  WonkoReference.h  WonkoUtil.cpp  WonkoUtil.h  WonkoVersion.cpp  WonkoVersion.h  WonkoVersionList.cpp  WonkoVersionList.h
notsecrets/: CMakeLists.txt  Launcher.icns  Secrets.cpp  Secrets.h
tests/: AccountTester.h  CMakeLists.txt  ClassParserTestClass.java  ModelTester.h  TestUtil.h  testutil.h  tst_AccountModel.cpp  tst_ChooseQuickModVersionDialog.cpp  tst_DownloadUpdateTask.cpp  tst_QuickMod.cpp  tst_QuickModSettings.cpp  tst_QuickModVersion.cpp  tst_QuickModsList.cpp  tst_VersionSelectDialog.cpp  tst_WonkoIndex.cpp  tst_classparser.cpp  tst_modutils.cpp  tst_resource.cpp
translations/: CMakeLists.txt  de.po  es.po  fr.po  ja.po  messages.pot  mmc_de.po  mmc_de.ts  mmc_es.ts  mmc_fr.po  mmc_fr.ts  pt_BR.po  sv.po
(+1204 files in other folders)
